--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -395,8 +395,13 @@ a {
     box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.07);
 }
 
+.deposite__icon {
+    cursor: pointer;
+}
+
 .deposite__title {
     color: #31456a;
+    user-select: none;
     margin-left: 8px;
     font-size: 1.4rem;
     font-weight: 600;
@@ -411,6 +416,7 @@ a {
 }
 
 .hero__interest {
+    user-select: none;
     position: absolute;
     top: 127px;
     right: -174px;
@@ -436,6 +442,7 @@ a {
 }
 
 .hero__secures-funds {
+    user-select: none;
     display: flex;
     align-items: center;
     position: absolute;
