--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Open Sans", serif;
 }
 
 input,
@@ -75,6 +75,13 @@ a {
     color: var(--desc-color);
     font-size: 1.8rem;
     line-height: 30px; /* 166.667% */
+}
+
+.heading-extra {
+    color: var(--primary-color);
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 1.25;
 }
 
 /* header */
@@ -470,4 +477,127 @@ a {
     margin-top: 5px;
     font-size: 0.8rem;
     line-height: 1;
+}
+
+.how-it-works {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 160px;
+}
+
+.hiw-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 230px;
+}
+
+.how-it-works__media {
+    width: 33%;
+    position: relative;
+    height: 619px;
+}
+
+.hiw-img {
+    width: 456px;
+    height: 619px;
+    position: absolute;
+    top: 0;
+    left: 7px;
+    right: 7px;
+    object-fit: cover;
+}
+
+.hiw-decor-bg {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.hiw-decor-card {
+    position: absolute;
+    top: 76px;
+    left: 344px;
+}
+
+.media-congrats {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    bottom: 96px;
+    left: 344px;
+    width: 226px;
+    /* height: 70px; */
+    padding: 15px;
+    border-radius: 8px;
+    background: #fffdfa;
+    box-shadow: 0px 14px 34px 0px rgba(0, 0, 0, 0.07);
+}
+
+.media-congrats__text {
+    margin-left: 10px;
+}
+
+.media-congrats__title {
+    color: var(--primary-color);
+    font-family: Inter, seriff;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.media-congrats__desc {
+    color: var(--desc-color);
+    font-family: Inter, serif;
+    font-size: 1.2rem;
+    margin-top: 5px;
+}
+
+.how-it-works__content {
+    flex: 1;
+}
+
+.hiw-content__title {
+    position: relative;
+    color: var(--title-color);
+    font-size: 1.6rem;
+    margin-left: 30px;
+    line-height: 1.75;
+}
+
+.hiw-content__title::before {
+    content: "";
+    position: absolute;
+    left: -30px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 18px;
+    height: 2px;
+    background: #696d77;
+}
+
+.hiw-content__heading {
+    margin: 12px 0 70px;
+}
+
+.hiw-content__step {
+    width: 470px;
+}
+
+.content-step__title {
+    margin-top: 30px;
+    color: var(--primary-color);
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 1.45;
+}
+
+.content-step__desc {
+    color: var(--desc-color);
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.75;
+    margin-top: 16px;
 }
